--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 71,
    "id": "a13c787a",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
        "['Received Orders', 'Forecast Per Channel', 'Inventory']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 72,
    "id": "81e599a7",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 73,
    "id": "4260a4e5",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "((417, 6), (1011, 10), (297, 12))"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 74,
    "id": "eee321ac",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 75,
    "id": "1fe6177c",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 76,
    "id": "e68bdb2a",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
        "((208, 7), (760, 11), (297, 13))"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 77,
    "id": "f7441c3e",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
        "['2025-11', '2025-12', '2026-01', '2026-02', '2026-03', '2026-04']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 78,
    "id": "0d16a0af",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
        "['2025-11', '2025-12', '2026-01', '2026-02', '2026-03']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 79,
    "id": "8bd3f40a",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
        "[]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 80,
    "id": "6ed9ccc5",
    "metadata": {},
    "outputs": [
@@ -900,7 +900,7 @@
        "             Channel 7      0.0      0.0     72.0    312.0    168.0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 81,
    "id": "96f32583",
    "metadata": {},
    "outputs": [
@@ -1022,7 +1022,7 @@
        "             Channel 9         4              4             8"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 82,
    "id": "2771e232",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1174,7 @@
        "             Channel 7   300.086957  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 83,
    "id": "16de5434",
    "metadata": {},
    "outputs": [
@@ -1345,7 +1345,7 @@
        "810084150689  1401.888579  1297.626741  1523.993966  1895.398557   866.092156"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 84,
    "id": "926b4665",
    "metadata": {},
    "outputs": [
@@ -1472,7 +1472,7 @@
        "810084150566          0        0      0.0  10012.0      0.0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 85,
    "id": "294448ea",
    "metadata": {},
    "outputs": [
@@ -1526,7 +1526,7 @@
        "(np.int64(622524), np.float64(478185.0), np.int64(27080))"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 86,
    "id": "44461628",
    "metadata": {},
    "outputs": [
@@ -1753,7 +1753,7 @@
        "143    LATE (after horizon)  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1799,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 87,
    "id": "03bd9519",
    "metadata": {},
    "outputs": [
@@ -1885,7 +1885,7 @@
        "810084150610    565.0    565.0    565.000000   565.000000    565.0"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1927,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 88,
    "id": "3dbfb3fa",
    "metadata": {},
    "outputs": [
@@ -1937,7 +1937,7 @@
        "(np.float64(697623.0), np.float64(877988.0))"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1968,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "id": "93da7a63",
    "metadata": {},
    "outputs": [
@@ -1978,7 +1978,7 @@
        "(75, 31, 96077.0)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 90,
    "id": "dc444ef0",
    "metadata": {},
    "outputs": [],
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "id": "1d60e7d3",
    "metadata": {},
    "outputs": [
@@ -2365,7 +2365,7 @@
        "810140556073                0.000000  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2413,7 +2413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 92,
    "id": "7eb4b491",
    "metadata": {},
    "outputs": [
@@ -2423,7 +2423,7 @@
        "(44, 10)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2445,7 +2445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 93,
    "id": "330ee9e3",
    "metadata": {},
    "outputs": [
@@ -2837,7 +2837,7 @@
        "840494420058              357.160000  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2873,7 +2873,17 @@
     "    This recursive formula allows for the detection of negative inventory states (backlogs) at any specific node in the timeline, rather than just assessing the end-state.\n",
     "\n",
     "### Technical Implementation & Tools\n",
-    "To complete this project within the allotted timeline, I employed principles of **prompt engineering** to expedite the generation of the Python/Pandas syntax. While I utilized AI to accelerate the coding of standard dataframe operations (joins, grouping, and aggregations), the analytical architecture, logic definition, assumption setting (such as the forecast-shaped allocation), and final validation of the results are entirely my own work."
+    "To complete this project within the allotted timeline, I employed principles of **prompt engineering** to expedite the generation of the Python/Pandas syntax. While I utilized AI to accelerate the coding of standard dataframe operations (joins, grouping, and aggregations), the analytical architecture, logic definition, assumption setting (such as the forecast-shaped allocation), and final validation of the results are entirely my own work.\n",
+    "\n",
+    "### Data confidentiality note (source file not published)\n",
+    "\n",
+    "Because I was not given warning instructions on whether the provided dataset is proprietary, I intentionally prevented the raw Excel data from being published to the repository. Specifically, before publishing I:\n",
+    "\n",
+    "- Added a `.gitignore` rule to exclude Excel files in the `data/` directory (e.g., `data/*.xlsx`).\n",
+    "- Removed the Excel file from Git tracking (so it is not included in the repository contents going forward).\n",
+    "- Re-exported the notebook results to a self-contained HTML report (`docs/index.html`) so the analysis can be reviewed without distributing the raw source file.\n",
+    "\n",
+    "As a result, anyone viewing the repository will be able to inspect the methodology and outputs via the HTML report, but will not receive the underlying raw dataset through the repo.\n"
    ]
   }
  ],
